# pyBPASS

./: .gitignore  LICENSE  README.md  build.py  pyproject.toml  setup.py
fsrc/: .f2py_f2cmap  rebin.f90  sed_tools.f90
pyBPASS/: database.py  spectral_synthesis.py
pyBPASS/tests/: config.py  test__rebin.py  test__sed_tools.py  test_spectral_synthesis.py
